--- a/css/styles.scss
+++ b/css/styles.scss
@@ -4,9 +4,94 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  outline: none;
 }
 
 body {
   font-family: "Poppins", sans-serif;
   font-size: 1rem;
+  background-image: linear-gradient(to bottom right, #7169b8, #fa8080);
+  min-height: 100vh;
+  display: grid;
+}
+
+.wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  #error-message {
+    display: none;
+    margin-bottom: 1.2em;
+    background: #fe8b8e;
+    padding: 1.2em;
+    text-align: center;
+    border-radius: 5px;
+    font-size: 0.875rem;
+    transition: all 0.5s ease;
+  }
+
+  .form-container {
+    width: 100%;
+    max-width: 450px;
+    background: whitesmoke;
+    padding: 1.7em;
+    border-radius: 5px;
+    box-shadow: 4px 4px 2px rgba(14, 7, 53, 0.24);
+  }
+
+  h2 {
+    text-align: center;
+    margin-bottom: 1.2em;
+    text-transform: uppercase;
+    letter-spacing: 0.0575em;
+    color: #332902;
+  }
+
+  .input-field {
+    margin-bottom: 0.75em;
+  }
+
+  input[type="text"],
+  textarea {
+    width: 100%;
+    font-family: inherit;
+    border: 1px solid #e0e0e0;
+    padding: 0.75em;
+    border-radius: 5px;
+  }
+
+  input::placeholder,
+  .btn input {
+    color: rgb(97, 97, 97);
+  }
+
+  textarea {
+    height: 15em;
+    resize: none;
+  }
+
+  .btn input[type="submit"] {
+    display: inline-block;
+    font-family: inherit;
+    letter-spacing: 0.0375;
+    border: 0;
+    margin: 0.7em 0 1.2em;
+    width: 100%;
+    background: whitesmoke;
+    border: 1px solid #e0e0e0;
+    border-radius: 5px;
+    padding: 0.75em;
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: 0.4s;
+
+    &:hover {
+      background: linear-gradient(to bottom right, #7169b8, #fa8080);
+      opacity: 0.8;
+      color: rgb(236, 236, 236);
+    }
+  }
 }
